complted group and notfications